# stable_starship_abstractions

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  coverage.sh
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  adaptors.cpp  adaptors.h  commands.h  datatypes.h  implementations.cpp  implementations.h  interfaces.h  starship.h
tests/: CMakeLists.txt  tests.cpp
